# rom24-quickmud-python

./: .coverage  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  100_PERCENT_ROM_PARITY_ACHIEVED.md  ACT_INFO_INTEGRATION_TESTS_COMPLETE.md  AGENT.EXECUTOR.md  AGENT.FIX-ERRORSV2.md  AGENT.RESTORE-TESTS.md  AGENT.md  AGENTS.md  AGENT_TEST_GUIDE.md  AGENT_UPDATE_SUMMARY.md  ARCHITECTURAL_TASKS.md  AREA_FILE_REGENERATION_FAQ.md  AUTONOMOUS_SESSION_COMPLETE.md  AUTONOMOUS_SESSION_COMPLETE_2025-12-22.md  AUTONOMOUS_SESSION_SUMMARY_2025-12-20.md  BUILDER_GUIDE.md  CHANGELOG.md  CHARACTER_TEST_PLAN.md  CLAUDE.md  COMBAT_DAMAGE_RESISTANCE_COMPLETION.md  COMBAT_GAP_VERIFICATION_FINAL.md  COMBAT_PARITY_AUDIT.md  COMBAT_PARITY_AUDIT_2025-12-28.md  COMBAT_SKILLS_ROM_PARITY_PLAN.md  COMMAND_AUDIT_2025-12-27.md  COMMAND_IMPLEMENTATION_STATUS.md  COMMAND_INTEGRATION_PARITY_REPORT.md  COMMAND_PARITY_AUDIT.md  COMMON_PITFALLS.md  CURRENT_STATUS_SUMMARY.md  DO_AFFECTS_AUDIT.md  DO_CONSIDER_AUDIT.md  DO_EQUIPMENT_AUDIT.md  DO_EXAMINE_AUDIT.md  DO_HELP_AUDIT.md  DO_PRACTICE_AUDIT.md  (+99 more)
.agent_logs/: auditor_1.jsonl  auditor_1.last.txt  auditor_2.jsonl  auditor_2.last.txt  executor_1.jsonl  executor_1.last.txt
.codex/: config.toml
agent/: .gitignore  constants.yaml
archive/: README.md
data/: README.md  help.json  skills.json  socials.json  ssh_host_key  time.json
doc/: c_module_inventory.md  c_python_cross_reference.md  c_to_python_file_coverage.md  docker-compose.yml  port.txt  python_module_inventory.md
docs/: ADMIN_GUIDE.md  BUILDER_MIGRATION_GUIDE.md  LETTA_INTEGRATION_PROPOSAL.md  ROM_2.4B6_PARITY_CERTIFICATION.md  ROM_PARITY_VERIFICATION_GUIDE.md  USER_GUIDE.md  integration_test_framework.md
log/: .gitignore  orphaned_helps.txt
mud/: __init__.py  __main__.py  advancement.py  config.py  game_loop.py  handler.py  mob_cmds.py  mobprog.py  notes.py  persistence.py  pyproject.toml  registry.py  rom_api.py  server.py  spec_funs.py  time.py  update.py  wiznet.py
mud/account/: __init__.py  account_manager.py  account_service.py
mud/admin_logging/: __init__.py  admin.py
mud/affects/: engine.py  saves.py
mud/agent/: __init__.py
mud/ai/: __init__.py  aggressive.py
mud/characters/: __init__.py  conditions.py  follow.py
mud/combat/: __init__.py  assist.py  death.py  engine.py  messages.py  safety.py
mud/commands/: admin_commands.py  advancement.py  affects.py  alias_cmds.py  auto_settings.py  build.py  channels.py  character.py  combat.py  communication.py  compare.py  consider.py  consumption.py  dispatcher.py  doors.py  equipment.py  feedback.py  give.py  group_commands.py  healer.py  help.py  imc.py  imm_admin.py  imm_commands.py  imm_display.py  imm_emote.py  imm_load.py  imm_olc.py  imm_punish.py  imm_search.py  imm_server.py  imm_set.py  info.py  info_extended.py  inspection.py  inventory.py  liquids.py  magic_items.py  misc_info.py  misc_player.py  (+15 more)
mud/db/: migrations.py  models.py  seed.py  serializers.py  session.py
mud/devtools/: __init__.py
mud/diagnostics/: invariants.py
mud/groups/: xp.py
mud/imc/: __init__.py  commands.py  protocol.py
mud/loaders/: __init__.py  area_loader.py  base_loader.py  help_loader.py  json_area_loader.py  json_loader.py  mob_loader.py  obj_loader.py  reset_loader.py  room_loader.py  shop_loader.py  specials_loader.py
mud/logging/: admin.py  agent_trace.py
mud/magic/: effects.py
mud/math/: stat_apps.py
mud/models/: README.md  __init__.py  area.py  area_json.py  board.py  board_json.py  character.py  character_json.py  clans.py  classes.py  constants.py  conversion.py  help.py  help_json.py  json_io.py  mob.py  note.py  obj.py  object.py  object_json.py  player_json.py  races.py  room.py  room_json.py  shop_json.py  skill.py  skill_json.py  social.py  social_json.py  titles.py  weapon_table.py
mud/music/: __init__.py
mud/net/: ansi.py  connection.py  protocol.py  session.py  ssh_server.py  telnet_server.py
mud/network/: __init__.py  websocket_server.py  websocket_stream.py
mud/olc/: editor_state.py  save.py
mud/scripts/: convert_are_to_json.py  convert_help_are_to_json.py  convert_player_to_json.py  convert_shops_to_json.py  convert_skills_to_json.py  convert_social_are_to_json.py  load_test_data.py
mud/security/: __init__.py  bans.py  hash_utils.py
mud/skills/: __init__.py  groups.py  handlers.py  metadata.py  registry.py  say_spell.py
mud/spawning/: mob_spawner.py  obj_spawner.py  reset_handler.py  templates.py
mud/utils/: act.py  bit.py  fix_sex.py  messaging.py  olc_tables.py  poses.py  prefix_lookup.py  prompt.py  rng_mm.py  string_editor.py  timing.py
mud/world/: char_find.py  linking.py  look.py  movement.py  obj_find.py  time_persistence.py  vision.py  world_state.py
schemas/: area.schema.json  board.schema.json  character.schema.json  help.schema.json  note.schema.json  object.schema.json  player.schema.json  room.schema.json  shop.schema.json  skill.schema.json  social.schema.json
scripts/: README.md  agent_loop.py  agent_loop.sh  autonomous_coding.sh  confidence_tracker.py  division_auditor.py  executor_only.sh  find_mappings.py  fix_orphaned_characters.py  function_mapper.py  lint_test_fixtures.py  parity_analyzer.py  patch_json_resets.py  patch_utils.py  quick_audit.sh  test_data_gatherer.py  verify_game_loop_parity.py  verify_unmapped.py
src/: Makefile.diffshim  Makefile.linux  Makefile.normal  Makefile.solaris  imc.c
tests/: README.md  conftest.py  test_account_auth.py  test_admin_commands.py  test_advancement.py  test_affects.py  test_agent_interface.py  test_alias_parity.py  test_ansi.py  test_are_conversion.py  test_area_counts.py  test_area_exits.py  test_area_loader.py  test_arith_208_dice_no_floor.py  test_arith_210_current_hp_no_floor.py  test_arith_211_look_condition_negative_max_hit.py  test_arith_max_hit_floor.py  test_attribute_convention.py  test_bans.py  test_boards.py  test_builder_hedit.py  test_building.py  test_char_update_rom_parity.py  test_combat.py  test_combat_assist.py  test_combat_damage_types.py  test_combat_death.py  test_combat_defenses_prob.py  (+167 more)
(+1415 files in other folders)
