[tool.poetry]
name = "pythonmud"
version = "0.1.0"
description = "Python MUD"
authors = ["Mark Jedrzejczyk <mark.jedrzejczyk@gmail.com>"]
packages = [
    { include = "mud" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = "*"
SQLAlchemy = "*"
typer = "*"
python-dotenv = "*"

[tool.poetry.scripts]
mud = "mud.__main__:cli"

[tool.poetry.group.dev.dependencies]
pytest = "*"
