[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quickmud"
version = "0.1.1"
description = "Python port of the ROM 2.4b6 MUD engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "SQLAlchemy>=2.0,<3",
    "typer>=0.9",
    "python-dotenv>=1.0",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "mypy",
    "ruff",
    "flake8",
    "jsonschema",
]

[project.scripts]
mud = "mud.__main__:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["mud*"]
