[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rom24-quickmud-python"
version = "2.14.168"
description = "A modern Python port of the ROM 2.4b6 MUD engine with full telnet server and JSON world loading"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Mark Jedrzejczyk", email = "mark.jedrzejczyk@gmail.com"}
]
maintainers = [
    {name = "Mark Jedrzejczyk", email = "mark.jedrzejczyk@gmail.com"}
]
keywords = ["mud", "rom", "game", "mmo", "telnet", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Multi-User Dungeons (MUD)",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "SQLAlchemy>=2.0,<3",
    "typer>=0.9",
    "python-dotenv>=1.0",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "pytest-timeout>=2.1.0",
    "asyncssh>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.8",
    "hypothesis>=6.100",
    "httpx>=0.27",
    "mypy>=1.0",
    "ruff>=0.1.0",
    "black>=22.0",
    "jsonschema>=4.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.8",
    "hypothesis>=6.100",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/Nostoi/rom24-quickmud-python"
Repository = "https://github.com/Nostoi/rom24-quickmud-python.git"
Documentation = "https://github.com/Nostoi/rom24-quickmud-python/blob/master/README.md"
"Bug Tracker" = "https://github.com/Nostoi/rom24-quickmud-python/issues"
Changelog = "https://github.com/Nostoi/rom24-quickmud-python/releases"

[project.scripts]
mud = "mud.__main__:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["mud*"]

[tool.pytest.ini_options]
# Run in parallel across all cores by default (~5.5x faster: ~517s -> ~94s).
# `--dist loadscope` keeps each module/class on one worker so module-scoped
# fixtures and per-file global state behave as in serial runs. Disable for
# single-test debugging with `-n0` (e.g. `pytest -n0 tests/foo.py::bar`).
addopts = "-n auto --dist loadscope"
markers = [
  "integration: Integration tests spanning multiple gameplay systems",
  "p0: Highest-priority parity and regression tests",
  "p1: Important regression and behavior tests",
  "p2: Lower-priority regression and coverage tests",
  "telnet: Telnet server tests that open sockets",
  "timeout: Tests guarded by pytest-timeout to prevent hangs",
  "check_invariants: Opt in to the post-game_tick world-invariant checker (mud.diagnostics.invariants) for this test",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "area/",
    "doc/",
    "imc/",
    "log/",
    "player/",
    "src/",
    "schemas/",
    "data/",
    "*.are",
    "*.txt",
    "*.md",
    "*.rc",
    "*.db",
    "*.log",
    "startup",
    "scripts/agent_loop.py",  # bash script with a .py extension — not Python
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["B011"]  # assert False
"mud/scripts/*.py" = ["F841"]  # allow unused vars in conversion scripts

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
follow_imports = "skip"
ignore_missing_imports = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "mud.db.models",
    "mud.account.account_manager",
    "mud.models.character",
    "mud.net.connection",
    "mud.persistence",
    "tests.test_account_auth",
]
follow_imports = "normal"
disallow_untyped_defs = true
